<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frame"
        android:layout_below="@+id/frame"
        android:layout_marginTop="22dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:layout_alignBottom="@+id/username"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignRight="@+id/frame"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="请输入用户名">

        <requestFocus />
    </EditText>
	
     <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="22dp"
        android:text="@string/password" />
     
       <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignBottom="@+id/password"
        android:layout_alignRight="@+id/frame"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="请输入用户密码" >
        <requestFocus />
    </EditText>

       <Button
           android:id="@+id/submit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/password_text"
           android:layout_below="@+id/password_text"
           android:layout_marginTop="30dp"
           android:text="@string/submit" />

       <Button
           android:id="@+id/reset"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBaseline="@+id/submit"
           android:layout_alignBottom="@+id/submit"
           android:layout_alignRight="@+id/password_text"
           android:layout_marginRight="44dp"
           android:text="@string/reset" />

       <Button
           android:id="@+id/login_regist"
           android:layout_width="50dp"
           android:layout_height="30dp"
           android:layout_alignRight="@+id/frame"
           android:layout_alignTop="@+id/frame"
           android:text="@string/login_regist"
           android:textSize="8dp" />

       <TextView
           android:id="@+id/text_copyright1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_alignRight="@+id/password_text"
           android:text="@string/text_copyright" 
           android:textSize="7dp"
           android:gravity="center_vertical|center_horizontal"/>
       
</RelativeLayout>